modification actu, et ajout d'event pour l'inscirption d'image

--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -23,3 +23,7 @@ api_platform:
     mercure:
         hub_url: '%env(MERCURE_SUBSCRIBE_URL)%'
     
+    collection:
+        pagination:
+            page_parameter_name: _page
+            items_per_page: 10
