--- a/api/composer.json
+++ b/api/composer.json
@@ -7,19 +7,21 @@
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.1",
         "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "doctrine/doctrine-migrations-bundle": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/mercure-bundle": "*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "vich/uploader-bundle": "^1.10"
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
         "fzaninotto/faker": "^1.8",
         "hautelook/alice-bundle": "^2.5",
-        "symfony/maker-bundle": "^1.11",
+        "symfony/maker-bundle": "^1.13",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
