--- a/api/.env
+++ b/api/.env
@@ -43,5 +43,8 @@ MERCURE_JWT_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxp
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=b7863d273323526fe5947e05a07c67a4
+JWT_PASSPHRASE=10a44a17817806e94f47dd7bcd3eaa36
 ###< lexik/jwt-authentication-bundle ###
+
+GOOGLE_CLIENT_ID=149026378290-l1qmqto29bpnegc9263j4uto0kkuorsd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=hxoKewQWgPwZCarYRmBJGC_f
