--- a/api/composer.json
+++ b/api/composer.json
@@ -9,6 +9,8 @@
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "knpuniversity/oauth2-client-bundle": "^1.29",
+        "league/oauth2-google": "^3.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
