--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -13,11 +13,11 @@ security:
 
     firewalls:
         dev:
-            pattern: ^/_(profiler|wdt)
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             stateless: true
-            anonymous: true
+            anonymous: false
             provider: app_user_provider
             json_login:
                 check_path: /authentication_token
@@ -28,4 +28,9 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
-
+    access_control:
+        - { path: ^/,       roles: ROLE_USER }
+            
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
